added navbar and links to contact and index files

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,23 +44,29 @@
         <header>Portfolio</header>
       </div>
       <hr>
-        <div class="row">
-          <div class="col-6">
-            <img src="images/myself.jpg" class="img-fluid" alt="myself">
+        <div class="row mainCouple">
+          <div class="col-lg-6 col-md-6">
+            <img src="images/myself.jpg" class="img-fluid width" alt="myself">
           </div>
-          <div class="col-6">
+          <div class="col-lg-6 col-md-6">
             <img src="images/couple.jpg" class="img-fluid" alt="my wife and I">
           </div>
-        <div class="row">
-          <div class="col-6">
+        <div class="row mainPets">
+          <div class="col-lg-6 col-md-6">
             <img src="images/Benji.jpg" class="img-fluid" alt="my dog Benji">
           </div>
-          <div class="col-6">
+          <div class="col-lg-6 col-md-6">
             <img src="images/Oso.jpg" class="img-fluid" alt="my dog Oso">
           </div>
         </div>
       </div>
     </div>
-    
+
+    <!-- footer -->
+    <div class="container footerContainer">
+      <div class="row">
+        <footer>Made with much EFFORT!</footer>
+      </div>
+    </div>
 </body>
 </html>
