added footers to the files and fixed them to the bottom of the  page

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
             </div>
         </div>
         <br>
+
+
+
+                <!-- footer -->
+    <div class="container fixed-bottom footerContainer">
+        <div class="row">
+          <footer>Made with much EFFORT!</footer>
+        </div>
+    </div>
     
 </body>
 </html>
