--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
     </div>
 
     <!-- footer -->
-    <div class="container footerContainer">
+    <div class="container sticky-bottom footerContainer">
       <div class="row">
         <footer>Made with much EFFORT!</footer>
       </div>
