--- a/contact.html
+++ b/contact.html
@@ -38,5 +38,37 @@
         </div>
         <br>
     
+        <!-- Contact form -->
+        <div class="container col-lg-6 mainContainer">
+            <div class="row">
+                <header>Contact</header>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Name</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div> 
+            </div>
+            <div class="row col-lg-2">
+                <input class="btn btn-outline-dark" type="submit" value="Submit">
+            </div>
+        </div>
+
+        <!-- footer -->
+    <div class="container fixed-bottom footerContainer">
+        <div class="row">
+          <footer>Made with much EFFORT!</footer>
+        </div>
+    </div>
+    
 </body>
 </html>
