added main content to my about page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,24 @@
         </div>
         <br>
 
+        <!-- Main content About Me -->
+
+    <div class="container col-lg-6 mainContainer">
+      <div class="row">
+        <header>About Me</header>
+      </div>
+      <hr>
+        <div class="row">
+          <div class="col-lg-6 col-md-6">
+            <img src="https://www.sherwin-williams.com/wcsstore/SherwinWilliamsAssetStore/dist/images/logo-blue.png" class="img-fluid float-start" alt="sherwin-williams logo">
+          </div>
+          <div class="col-lg-6 col-md-6">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem sapiente voluptatem, amet iusto fuga est voluptas aliquid animi tempore eos molestiae, ab adipisci earum possimus harum repellendus, cupiditate facilis sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, nihil magni optio repudiandae exercitationem consequuntur vel quis, ratione asperiores incidunt rerum labore nemo, similique explicabo reprehenderit reiciendis? Voluptas, voluptate at! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, nisi quasi nam labore in voluptatem facilis illo sunt recusandae, odio, iusto dolorum sit ipsa! Laudantium error voluptatibus ipsum iure corrupti?</p>
+          </div>
+          <div class="row">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis laboriosam, inventore perspiciatis, repellendus ratione nulla iusto dolorem illo, magni natus sed? Temporibus facilis culpa sapiente quia saepe cumque ut dolorem.</p>
+          </div>
+
 
 
                 <!-- footer -->
