--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
           <div class="row">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis laboriosam, inventore perspiciatis, repellendus ratione nulla iusto dolorem illo, magni natus sed? Temporibus facilis culpa sapiente quia saepe cumque ut dolorem.</p>
           </div>
+        </div>
+    </div>    
 
 
 
