--- a/contact.html
+++ b/contact.html
@@ -47,11 +47,11 @@
             <div class="row">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Name</label>
-                    <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Name">
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
                   </div>
                   <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
                   </div>
                   <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Message</label>
